{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 12,
  "lineage": "58c0b1ea-b0e5-ea45-0555-f96b49ae4045",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.27.3.244",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-10-27T20:14:10.592-07:00",
            "id": "projects/proyectospring-476500/regions/us-central1/addresses/devops-spring-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "devops-spring-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "proyectospring-476500",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/regions/us-central1/addresses/devops-spring-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-27T20:14:21.692-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyectospring-476500/global/firewalls/devops-spring-allow-app",
            "log_config": [],
            "name": "devops-spring-allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network",
            "priority": 1000,
            "project": "proyectospring-476500",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/firewalls/devops-spring-allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "app-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-27T20:14:21.686-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyectospring-476500/global/firewalls/devops-spring-allow-http",
            "log_config": [],
            "name": "devops-spring-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network",
            "priority": 1000,
            "project": "proyectospring-476500",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/firewalls/devops-spring-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-27T20:14:21.750-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyectospring-476500/global/firewalls/devops-spring-allow-https",
            "log_config": [],
            "name": "devops-spring-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network",
            "priority": 1000,
            "project": "proyectospring-476500",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/firewalls/devops-spring-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22025"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-27T20:14:21.698-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyectospring-476500/global/firewalls/devops-spring-allow-ssh",
            "log_config": [],
            "name": "devops-spring-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network",
            "priority": 1000,
            "project": "proyectospring-476500",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/firewalls/devops-spring-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-8-v20251017",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/zones/us-central1-a/disks/devops-spring-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/proyectospring-476500/zones/us-central1-a/instances/devops-spring-instance",
            "instance_id": "8778911146060909515",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "devops-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC+uqZgzloCixIfYDahsXjYcW5i/7ETCNPNWDjRdg/VD3UFwWMUnb4RIJjSJKhp0giGpHxVTLJRGPYcOR4kN28ZZHCCZGRCDjc4+JCPfm+K/55iJhjh+kIaehepfXe88gMXjvDjG+WMNfsEC9S1ij1SQGiHtABYyNTDLhyO6+jK1o3pG+7dxyzsK+JjJuVoJ1oG3ylI17hKvyY783ZOlHnOc/nTCWkRw/gOHbqEu3PhQxke95tgKhiInJg+ysYcnfs+aOK/0XezdP7axavyvWEx9IqnPOWB430oTeyrcfBRzA+CaGP+bXXNJxyG9ASkhGqbus3ojI/39DSjLG4wztOv85/YgS+clHJ5L9ZsrOdcpae/u1jgkQHv0Stqw6pBwmgAaPVXUkc5JJTGfTCM8LXU57i1N96f0uSZZ2a18 [...]
            },
            "metadata_fingerprint": "5g3md4gljGE=",
            "metadata_startup_script": "#!/bin/bash\n\n# Actualizar el sistema\nsudo dnf update -y\n\n# Instalar paquetes necesarios\nsudo dnf install -y yum-utils device-mapper-persistent-data lvm2 git\n\n# Agregar el repositorio de Docker\nsudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo\n\n# Instalar Docker\nsudo dnf install -y docker-ce docker-ce-cli containerd.io\n\n# Iniciar y habilitar el servicio de Docker\nsudo systemctl start docker\nsudo syste [...]
            "name": "devops-spring-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.3.244",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network",
                "network_ip": "192.168.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/regions/us-central1/subnetworks/devops-spring-subnet",
                "subnetwork_project": "proyectospring-476500"
              }
            ],
            "project": "proyectospring-476500",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/zones/us-central1-a/instances/devops-spring-instance",
            "service_account": [
              {
                "email": "432947365280-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-server",
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "Y1AL_8l7Pds=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/proyectospring-476500/global/networks/devops-spring-network",
            "mtu": 1460,
            "name": "devops-spring-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1268294169029086189",
            "project": "proyectospring-476500",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-27T20:14:21.831-07:00",
            "gateway_address": "192.168.10.1",
            "id": "projects/proyectospring-476500/regions/us-central1/subnetworks/devops-spring-subnet",
            "ip_cidr_range": "192.168.10.0/24",
            "name": "devops-spring-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/global/networks/devops-spring-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proyectospring-476500",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyectospring-476500/regions/us-central1/subnetworks/devops-spring-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}